added quick fix to view commands